<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/refresh_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_margin="16dp"
        android:text="@string/refresh_button_text"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/load_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_margin="16dp"
        android:text="@string/load_image_button_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_margin="16dp"
        android:text="@string/sort_button_text"/>

</LinearLayout>